# krokodile-bots

./: .dockerignore  .env.example  .gitignore  .gitmodules  README.md  docker-compose.yml
ai-brain/: pyproject.toml
ai-brain-old/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
ai-brain-old/reference/: README.md
ai-brain-old/scripts/: analyze_shuttle.py
ai-brain/reference/: smartbots_bridge.smx  smartbots_observer.smx  smartbots_observer.sp
ai-brain/src/smartbots/: __main__.py  behavior.py  clearance.py  collision_map.py  flow_field.py  movement.py  navigation.py  pathfollower.py  protocol.py  server.py  smoothing.py  spatial_recorder.py  state.py  strategy.py  telemetry.py  visibility.py
bspMeshExporter/: .gitignore  README.md  pyproject.toml
bspMeshExporter/src/bsp_mesh_exporter/: __init__.py  __main__.py  areas_extraction.py  bsp_extraction.py  clearance.py  influence.py  objectives_extraction.py  visibility.py  vismatrix.py  walk_graph.py  zones_extraction.py
data/: buhriz_coop_areas.json  contact_coop_areas.json  district_coop_areas.json  drycanal_coop_areas.json  embassy_coop_areas.json  heights_coop_areas.json  market_coop_areas.json  ministry_coop_areas.json  revolt_coop_areas.json  siege_coop_areas.json  sinjar_coop_areas.json  tell_coop_areas.json  verticality_coop_areas.json
insurgency-server/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  download-server.sh
insurgency-server/ai-brain/: requirements.txt
insurgency-server/cfg/: nbdebug.cfg  server_checkpoint.cfg
insurgency-server/gamedata/: smartbots.txt  smartbots_ammobox.txt  smartbots_bridge.txt  smartbots_deathzones.txt  smartbots_navspawn.txt
insurgency-server/plugins/: README.md  smartbots_bridge.sp  smartbots_observer.sp
insurgency-server/scripting/: smartbots.sp  smartbots_ammobox.sp  smartbots_deathzones.sp  smartbots_healthbox.sp  smartbots_navspawn.sp  smartbots_resupply.sp
insurgency-server/scripts/: betterbots.cfg  entrypoint-vanilla.sh  entrypoint.sh  hardbots.cfg  server.cfg
metamod-extension/: CMakeLists.txt  README.md  smartbots.vdf
metamod-extension/src/: bot_action_hook.cpp  bot_action_hook.h  bot_action_types.h  bot_command.cpp  bot_command.h  bot_state.cpp  bot_state.h  bot_tactics.cpp  bot_tactics.h  bot_trace.cpp  bot_trace.h  bot_voice.cpp  bot_voice.h  detour.cpp  detour.h  extension.cpp  extension.h  game_events.cpp  game_events.h  nav_flanking.cpp  nav_flanking.h  nav_objectives.cpp  nav_objectives.h  sig_resolve.cpp  sig_resolve.h  udp_bridge.cpp  udp_bridge.h
metamod-nav-spawning/: CMakeLists.txt  README.md  navspawning.vdf
metamod-nav-spawning/src/: detour.h  extension.cpp  extension.h  sig_resolve.cpp  sig_resolve.h  spawn_scoring.cpp  spawn_scoring.h
navMeshParser/: .gitignore  README.md  cluster_nav.py  insurgency_nav.ksy  parse_nav.py
reverseEngeneering/: .gitignore  decompile.sh
reverseEngeneering/analysis/: CINSNextBot_methods.txt  action_transition_graph.md  class_hierarchy.json  cvarlist.txt  engine_bot_symbols.txt  ins_vtables.txt  insurgency-game-events.md  strategic_ai_architecture.md  string_xrefs_per_class.md  team_coordination_design.md  verified_behavior_log.md  vtable_map.json
reverseEngeneering/decompiled/: Action_CINSNextBot.c  Behavior_CINSNextBot.c  CINSBotActionAmbush.c  CINSBotActionCheckpoint.c  CINSBotActionConquer.c  CINSBotActionFirefight.c  CINSBotActionFlashpoint.c  CINSBotActionHunt.c  CINSBotActionInfiltrate.c  CINSBotActionOccupy.c  CINSBotActionOutpost.c  CINSBotActionPush.c  CINSBotActionSkirmish.c  CINSBotActionStrike.c  CINSBotActionSurvival.c  CINSBotActionTraining.c  CINSBotApproach.c  CINSBotAttack.c  CINSBotAttackAdvance.c  CINSBotAttackCQC.c  CINSBotAttackFromCover.c  CINSBotAttackInPlace.c  CINSBotAttackIntoCover.c  CINSBotAttackLMG.c  CINSBotAttackMelee.c  CINSBotAttackPistol.c  CINSBotAttackRifle.c  CINSBotAttackSniper.c  CINSBotBody.c  CINSBotCaptureCP.c  CINSBotCaptureFlag.c  CINSBotChatter.c  CINSBotCombat.c  CINSBotDead.c  CINSBotDestroyCache.c  CINSBotEscort.c  CINSBotFireRPG.c  CINSBotFlashed.c  CINSBotFollowCommand.c  CINSBotGamemodeMonitor.c  (+29 more)
reverseEngeneering/scripts/: README.md  annotate_rodata_floats.py  annotate_vtables.py  extract_class_hierarchy.py  extract_string_xrefs.py  ghidra_decompile_bots.py  resolve_pic_refs.py
reverseEngineering/: .gitignore  decompile.sh  decompile_ammo.sh  extract_win_signatures.sh
reverseEngineering/analysis/: BOT_AI_ARCHITECTURE.md  CINSBotMainAction_methods.txt  CINSBotTacticalMonitor_methods.txt  behavior_action_system.md  behavior_tree_architecture.md  bot_action_methods.txt  bot_convars.txt  bot_rtti_symbols.txt  cinsnextbotmanager.md  class_data_layouts.md  grenade_system.md  insurgency-game-events.md  objective_gamemode_system.md  pathfinding_system.md  position_scoring_design.md  retreat_cover_system.md  (+7 more)
tactical-brain/: Dockerfile  pyproject.toml
tactical-brain/src/tactical/: __main__.py  areas.py  influence_map.py  map_data.py  pathfinding.py  planner.py  protocol.py  server.py  state.py  strategist.py  strategist_llm.py  strategist_sm.py  telemetry.py  wave_front.py
tactical-brain/tools/: plot_deaths.py
tools/: plot_trace.py  pyproject.toml
(+116 files in other folders)
