[project]
name = "bsp-mesh-exporter"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "bsp-tool>=0.6.0",
    "trimesh>=4.0.0",
    "embreex>=2.0.0",
    "numpy>=1.26.0",
    "scipy>=1.14",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bsp_mesh_exporter"]

[tool.ruff]
line-length = 100

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "ruff>=0.15.0",
]
